# pplug-volumepulse

./: meson.build
debian/: changelog  control  copyright  lpplug-volumepulse.install
po/: POTFILES.in  en_GB.po  pl.po  pt_BR.po  zh_CN.po
src/: bluetooth.c  bluetooth.h  commongui.c  commongui.h  meson.build  pulse.c  pulse.h  volumepulse.c  volumepulse.cpp  volumepulse.h  volumepulse.hpp
